Fixed shop page. Features added: + Image zoom on click + Scrollbar for description + No more layout bug, looks damn good right now TO-DO: - See previous - May change scroll bar to appear only when "Read more" is clicked

--- a/css/shop.css
+++ b/css/shop.css
@@ -5,6 +5,7 @@
     --textColor: #483420;
     --starColor: #f67034;
     --sectionBack: #f7f6f9;
+    --zoom-rate: 1.25;
 }
 
 main {
@@ -26,7 +27,7 @@ body {
     width: 95%;
     height: fit-content;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
 }
@@ -54,11 +55,11 @@ header h1 {
 .product {
     /* position: relative; */
     /* box-sizing: border-box; */
-    width: clamp(10vw, 250px, 30vw);
-    height: fit-content;
-    min-height: 300px;
-    padding: 20px;
-
+    /* width: clamp(10vw, 250px, 30vw); */
+    width: 280px;
+    height: 400px;
+    padding: 10px;
+    
     border-radius: 10px;
     background-color: var(--sectionBack);
     box-shadow: 0 5px 20px rgba(0, 0, 0, .3);
@@ -75,36 +76,86 @@ header h1 {
     box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
 }
 
-.product-img {
-    object-fit: cover;
-    height: 60%;
-    width: 100%;
-    margin: 0 auto;
+.description {
+    height: 150px;
+    margin: 5px 0;
+    padding: 0;
+    overflow-y: scroll;
+
+    font-size: 18px;
+    line-height: 1.5em;
+}
+.description p {
+    margin: 0;
+    padding: 0;
+}
+
+.description::-webkit-scrollbar {
+    width: 5px;
+}
+.description::-webkit-scrollbar-thumb {
+    background: var(--textColor);
     border-radius: 5px;
 }
 
-.product-name {
+.product-img {
+    object-fit: cover;
     width: 100%;
+    min-height: 200px;
     margin: 0 auto;
-    font-size: 25px;
+    border-radius: 5px;
+    border: darkslategray 1px solid;
+}
+.product-img:hover {
+    cursor: zoom-in;
+}
+.product-img:active {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: calc(var(--zoom-rate) * 100%);
+    height: auto;
+    /* height: calc(var(--zoom-rate) * min(200px, 60%)); */
+    object-fit: fill;
+}
+.product-img:active ~ :not(.buy) {
+    visibility: hidden;
+}
+
+.product-name {
+    box-sizing: border-box;
+    width: 100%;
+    height: 60px;
+    padding: 0 5px;
+    overflow-x: scroll;
+    margin: 0 auto;
     text-transform: capitalize;
     color: var(--textColor);
 }
+.product-name > h3 {
+    font-size: 25px;
+    width: max-content;
+    margin: 0;
+}
+.product-name::-webkit-scrollbar {
+    display: none;
+}
+.product-name::-webkit-scrollbar-thumb {
+    background: #b68f69;
+    size: 1px;
+}
 
-.product-name span {
+/* .product-name span {
     font-size: 1.5em;
     color: var(--starColor);
-}
-
-.product p {
-    font-size: 18px;
-    line-height: 25px;
-}
+} */
 
 .buy {
     margin: 0px 20px 20px auto;
-    bottom: 20px;
-    right: 20px;
+    bottom: 0px;
+    right: 0px;
+    position: relative;
     width: fit-content;
     padding: 10px 20px;
     border-radius: 7px;
